# Sherlly_WM

./: Cargo.toml  README.md
src/: .bar.rs.swo  .bar.rs.swp  actions.rs  api_call.rs  bar.rs  bindings.rs  lib.rs  main.rs  reader.rs  startup.rs
src/penrose_ui/src/bar/widgets/: .sys.rs.swp
src/statusbar/: .sb-battery.swp  sb-forecast
