[package]
name = "sherlly_wm"
version = "0.2.0"
authors = ["Sherlly <jacobp.willo@gmail.com>"]
edition = "2021"

[[bin]]
doc = false
name = "swm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
clap = "4.0.18"
curl = "0.4.44"
penrose = "0.3.1"
penrose_ui = "0.1.1"
regex = "1.7.1"
simplelog = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
